RESOLVED FIXED140373
REGRESSION (r177656): Text in find-in-page yellow bouncy rectangle is not crisp
https://bugs.webkit.org/show_bug.cgi?id=140373
Summary REGRESSION (r177656): Text in find-in-page yellow bouncy rectangle is not crisp
Tim Horton
Reported 2015-01-12 15:19:10 PST
REGRESSION (r177656): Text in find-in-page yellow bouncy rectangle is not crisp
Attachments
Patch (2.11 KB, patch)
2015-01-12 15:20 PST, Tim Horton
no flags
Patch (3.07 KB, patch)
2015-01-12 15:36 PST, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2015-01-12 15:20:59 PST
Tim Horton
Comment 2 2015-01-12 15:21:39 PST
Tim Horton
Comment 3 2015-01-12 15:36:43 PST
Tim Horton
Comment 4 2015-01-12 15:57:39 PST
Note You need to log in before you can comment on or make changes to this bug.