REGRESSION (r177656): Text in find-in-page yellow bouncy rectangle is not crisp https://bugs.webkit.org/show_bug.cgi?id=140373 <rdar://problem/19447156>

Reviewed by Simon Fraser.

* page/mac/TextIndicatorWindow.mm:
(WebCore::TextIndicatorWindow::setTextIndicator):
Expand the window margin to the nearest integer.
The window was already being pixel-snapped, but then we'd translate by
the non-integral margin when building up the layer tree.
It's OK to do this on 2x because it's fine to have the margin be bigger
than needed.

* platform/spi/cg/CoreGraphicsSPI.h:
Add a CGCeiling to match CGFloor.


Canonical link: https://commits.webkit.org/158355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178304 268f45cc-cd09-0410-ab3c-d52691b4dbfc